--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+
     implementation "com.google.android.material:material:$androidx_version"
     implementation "androidx.browser:browser:$androidx_version"
     implementation "androidx.annotation:annotation:$androidx_version"
@@ -76,13 +77,11 @@ dependencies {
     implementation "com.madgag.spongycastle:prov:$spongy_castle_version"
     implementation "androidx.multidex:multidex:2.0.0"
 
-    implementation "com.google.android.material:material:$androidx_version"
-
     implementation('com.twitter.sdk.android:twitter:3.3.0@aar') {
         transitive = true
     }
 
-    implementation 'com.couchbase.lite:couchbase-lite-android:2.0.0'
+   // implementation 'com.couchbase.lite:couchbase-lite-android:2.0.0'
 
 }
 
