--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation "androidx.annotation:annotation:$androidx_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     implementation "androidx.core:core-ktx:$androidx_version"
+
+    implementation "android.arch.work:work-runtime:$work_version"
+
     implementation 'com.github.apl-devs:appintro:v4.2.3'
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
     implementation "org.jetbrains.anko:anko-appcompat-v7-commons:$anko_version"
@@ -81,8 +84,7 @@ dependencies {
         transitive = true
     }
 
-   // implementation 'com.couchbase.lite:couchbase-lite-android:2.0.0'
-
+    implementation 'com.couchbase.lite:couchbase-lite-android:2.0.0'
 }
 
 
