--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AppEntry">
+        <activity
+            android:name=".AppEntry"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,7 +33,9 @@
                     android:scheme="https" />
             </intent-filter>
         </activity>
-        <activity android:name=".AppIntroActivity" />
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".AppIntroActivity" />
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme.TransparentStatusBar" />
