--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,11 @@ android {
             minifyEnabled false
         }
     }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+        preDexLibraries true
+    }
 }
 
 dependencies {
@@ -39,12 +44,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:$androidx_version"
     implementation "androidx.cardview:cardview:$androidx_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-rc01'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 
-    implementation "com.google.android.material:material:$androidx_version"
+    implementation "com.google.android.material:material:1.0.0-rc01"
     implementation "androidx.browser:browser:$androidx_version"
     implementation "androidx.annotation:annotation:$androidx_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
@@ -84,8 +88,6 @@ dependencies {
     implementation('com.twitter.sdk.android:twitter:3.3.0@aar') {
         transitive = true
     }
-
-    implementation 'com.google.android:flexbox:1.0.0'
 
 }
 
