--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
 
     compileSdkVersion 28
@@ -48,10 +50,10 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 
-    implementation "com.google.android.material:material:1.0.0-rc01"
+    implementation "com.google.android.material:material:1.0.0-rc02"
     implementation "androidx.browser:browser:$androidx_version"
     implementation "androidx.annotation:annotation:$androidx_version"
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.core:core-ktx:$androidx_version"
 
     implementation "android.arch.work:work-runtime:$work_version"
@@ -84,6 +86,9 @@ dependencies {
     implementation "com.madgag.spongycastle:core:$spongy_castle_version"
     implementation "com.madgag.spongycastle:prov:$spongy_castle_version"
     implementation "androidx.multidex:multidex:2.0.0"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
 
     implementation('com.twitter.sdk.android:twitter:3.3.0@aar') {
         transitive = true
