--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.61'
+    ext.kotlin_version = '1.2.70'
     ext.androidx_version = '1.0.0-rc02'
     ext.anko_version='0.10.5'
     ext.fuel_version = '1.14.0'
     ext.spongy_castle_version = '1.58.0.0'
-    ext.work_version = '1.0.0-alpha07'
+    ext.work_version = '1.0.0-alpha09'
+    ext.room_version = "2.0.0-alpha1"
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha07'
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha11'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.0.1'
         // NOTE: Do not place your application dependencies here; they belong
