--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.core:core-ktx:$androidx_version"
 
-    implementation "android.arch.work:work-runtime:$work_version"
+    //implementation "android.arch.work:work-runtime:$work_version"
 
     implementation 'com.github.apl-devs:appintro:v4.2.3'
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
@@ -88,12 +88,16 @@ dependencies {
     implementation "androidx.multidex:multidex:2.0.0"
 
     implementation "androidx.room:room-runtime:$room_version"
+
     kapt "android.arch.persistence.room:compiler:$room_version"
 
     implementation('com.twitter.sdk.android:twitter:3.3.0@aar') {
         transitive = true
     }
 
+    implementation "org.threeten:threetenbp:1.3.7"
+
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
 }
 
 
