--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     ext.fuel_version = '1.14.0'
     ext.spongy_castle_version = '1.58.0.0'
     ext.work_version = '1.0.0-alpha09'
-    ext.room_version = "2.0.0-alpha1"
+    ext.room_version = "2.0.0-rc01"
 
     repositories {
         google()
