--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,10 @@ dependencies {
 
     //implementation "android.arch.work:work-runtime:$work_version"
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.1'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1'
+
     implementation 'com.github.apl-devs:appintro:v4.2.3'
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
     implementation "org.jetbrains.anko:anko-appcompat-v7-commons:$anko_version"
