--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     ext.spongy_castle_version = '1.58.0.0'
     ext.work_version = '1.0.0-alpha09'
     ext.room_version = "2.0.0-rc01"
+    ext.lifecycle_ver = "2.0.0"
 
     repositories {
         google()
