--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,14 @@ buildscript {
     ext.anko_version='0.10.5'
     ext.fuel_version = '1.14.0'
     ext.spongy_castle_version = '1.58.0.0'
-    ext.work_version = '1.0.0-alpha09'
+    ext.work_ver = '1.0.0-alpha09'
     ext.room_version = "2.0.0-rc01"
     ext.lifecycle_ver = "2.0.0"
 
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0-alpha11'
