--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,7 +87,7 @@ dependencies {
         exclude group: 'androidx.annotation', module: 'annotation'
     }//end fb lib exclude
 
-    implementation "com.facebook.stetho:stetho:1.5.0"
+    debugImplementation "com.facebook.stetho:stetho:1.5.0"
     implementation "com.madgag.spongycastle:core:$spongy_castle_version"
     implementation "com.madgag.spongycastle:prov:$spongy_castle_version"
     implementation "androidx.multidex:multidex:2.0.0"
