--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             android:screenOrientation="portrait"
             android:name=".AppIntroActivity" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".SocialLoginActivity"
             />
         <activity android:name=".HomeActivity" />
         <activity android:name=".SocialLoginVerification" />
