--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ apply plugin: 'kotlin-kapt'
 android {
 
     compileSdkVersion 28
+
     defaultConfig {
         applicationId "com.transcodium.tnsmoney"
         minSdkVersion 19
@@ -46,17 +47,17 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:$androidx_version"
     implementation "androidx.cardview:cardview:$androidx_version"
+    implementation "androidx.appcompat:appcompat:$androidx_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 
-    implementation "com.google.android.material:material:1.0.0-rc02"
+    implementation "com.google.android.material:material:$androidx_version"
     implementation "androidx.browser:browser:$androidx_version"
     implementation "androidx.annotation:annotation:$androidx_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.core:core-ktx:$androidx_version"
 
-    //implementation "android.arch.work:work-runtime:$work_version"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.1'
 
@@ -96,7 +97,6 @@ dependencies {
 
     kapt "android.arch.persistence.room:compiler:$room_version"
 
-    //implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_ver"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_ver"
 
     kapt "androidx.lifecycle:lifecycle-runtime:$lifecycle_ver"
@@ -110,7 +110,7 @@ dependencies {
     implementation "com.firebase:firebase-jobdispatcher:0.8.5"
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-    
+
 }
 
 
