--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".AppEntry"
             android:screenOrientation="portrait">
@@ -35,11 +35,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:screenOrientation="portrait"
-            android:name=".AppIntroActivity" />
-        <activity
-            android:name=".SocialLoginActivity"
-            />
+            android:name=".AppIntroActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".SocialLoginActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".SocialLoginVerification" />
 
@@ -69,13 +67,14 @@
         <activity android:name=".AboutActivity" />
 
         <service
-            android:exported="false"
-            android:name=".classes.jobs.AssetsDataJob">
+            android:name=".classes.jobs.AssetsDataJob"
+            android:exported="false">
             <intent-filter>
-                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
         </service>
 
+        <activity android:name=".ReceiveCryptoActivity"></activity>
     </application>
 
 </manifest>
