--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
-    ext.androidx_version = '1.0.0-rc02'
+    ext.kotlin_version = '1.2.61'
+    ext.androidx_version = '1.0.0'
     ext.anko_version='0.10.5'
     ext.fuel_version = '1.14.0'
     ext.spongy_castle_version = '1.58.0.0'
@@ -15,6 +15,7 @@ buildscript {
         jcenter()
         maven { url 'https://jitpack.io' }
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0-alpha11'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
