receive Asset fragment -> Activity
ReceiveCryptoAsset DialogFragment converted to Activity with Dialog Theme

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,10 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".ReceiveCryptoActivity"></activity>
+        <activity
+            android:name=".ReceiveCryptoAssetActivity"
+            android:theme="@style/AppDialog"
+            />
     </application>
 
 </manifest>
