Receive Crypto Asset Update
Address retrieval, QR code update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="true">
         <activity
             android:name=".AppEntry"
             android:screenOrientation="portrait">
@@ -77,6 +78,7 @@
         <activity
             android:name=".ReceiveCryptoAssetActivity"
             android:theme="@style/AppDialog"
+            android:screenOrientation="portrait"
             />
     </application>
 
