--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
 
     <application
         android:allowBackup="false"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:hardwareAccelerated="true">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".AppEntry"
             android:screenOrientation="portrait">
@@ -77,8 +77,12 @@
 
         <activity
             android:name=".ReceiveCryptoAssetActivity"
-            android:theme="@style/AppDialog"
             android:screenOrientation="portrait"
+            android:theme="@style/AppDialog" />
+        <activity
+            android:name=".SendCryptoAssetActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppDialog"
             />
     </application>
 
