--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,12 +67,11 @@ dependencies {
     implementation 'com.github.apl-devs:appintro:v4.2.3'
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
     implementation "org.jetbrains.anko:anko-appcompat-v7-commons:$anko_version"
-    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
 
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 
     implementation 'com.tapadoo.android:alerter:3.0.0'
-    implementation "com.google.android.gms:play-services-auth:16.0.0"
+    implementation "com.google.android.gms:play-services-auth:$play_ver"
 
     implementation('com.facebook.android:facebook-login:[4,5)') {
         exclude group: 'com.android.support', module: 'support-v4'
@@ -94,9 +93,9 @@ dependencies {
     implementation "com.madgag.spongycastle:prov:$spongy_castle_version"
     implementation "androidx.multidex:multidex:2.0.0"
 
-    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-runtime:$room_ver"
 
-    kapt "android.arch.persistence.room:compiler:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_ver"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_ver"
 
@@ -111,6 +110,12 @@ dependencies {
     implementation "com.firebase:firebase-jobdispatcher:0.8.5"
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
+    //this includes zxing, so no need to include it
+    implementation('com.journeyapps:zxing-android-embedded:3.6.0') {
+        transitive = true
+        exclude group: 'com.google.zxing', module: 'core'
+    }
 
     implementation "com.google.zxing:core:3.3.3"
 }
