--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.61'
+    ext.kotlin_version = '1.2.71'
     ext.androidx_version = '1.0.0'
     ext.anko_version='0.10.5'
     ext.fuel_version = '1.14.0'
     ext.spongy_castle_version = '1.58.0.0'
     ext.work_ver = '1.0.0-alpha09'
-    ext.room_version = "2.0.0-rc01"
+    ext.room_ver = "2.0.0"
     ext.lifecycle_ver = "2.0.0"
+    ext.play_ver = "16.0.1"
 
     repositories {
         google()
