--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:name="android.hardware.camera2"
         android:required="false" />
 
+    <uses-feature android:name="android.hardware.fingerprint"
+        android:required="false"/>
+
     <application
         android:allowBackup="false"
         android:hardwareAccelerated="true"
@@ -95,8 +98,11 @@
             android:screenOrientation="fullSensor"
             tools:replace="screenOrientation" />
         <activity
-            android:name=".setAppPinActivity"
+            android:name=".SetPinCodeActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".PinCodeAuthActivity"
+            />
     </application>
 
 </manifest>
