--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         <activity
             android:name=".AppIntroActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".SocialLoginActivity" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".SocialLoginVerification" />
 
