--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,21 +48,21 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$androidx_version"
     implementation "androidx.cardview:cardview:$androidx_version"
     implementation "androidx.appcompat:appcompat:$androidx_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    implementation "com.google.android.material:material:$androidx_version"
-    implementation "androidx.browser:browser:$androidx_version"
+    implementation "com.google.android.material:material:1.1.0-alpha02"
+    implementation "androidx.browser:browser:1.0.0"
     implementation "androidx.annotation:annotation:$androidx_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.core:core-ktx:$androidx_version"
+    implementation "androidx.core:core-ktx:1.0.1"
 
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_ver"
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_ver"
 
     implementation 'com.github.apl-devs:appintro:v4.2.3'
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
@@ -91,7 +91,7 @@ dependencies {
     debugImplementation "com.facebook.stetho:stetho:1.5.0"
     implementation "com.madgag.spongycastle:core:$spongy_castle_version"
     implementation "com.madgag.spongycastle:prov:$spongy_castle_version"
-    implementation "androidx.multidex:multidex:2.0.0"
+    implementation "androidx.multidex:multidex:2.0.1"
 
     implementation "androidx.room:room-runtime:$room_ver"
 
@@ -118,6 +118,9 @@ dependencies {
     }
 
     implementation "com.google.zxing:core:3.3.3"
+
+    implementation "com.google.android.gms:play-services-safetynet:16.0.0"
+
 }
 
 
