--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
-    ext.androidx_version = '1.0.0'
+    ext.kotlin_version = '1.3.11'
+    ext.androidx_version = '1.0.0-alpha09'
     ext.anko_version='0.10.5'
-    ext.fuel_version = '1.14.0'
     ext.spongy_castle_version = '1.58.0.0'
     ext.work_ver = '1.0.0-alpha09'
     ext.room_ver = "2.0.0"
     ext.lifecycle_ver = "2.0.0"
     ext.play_ver = "16.0.1"
+    ext.kotlinx_ver = "1.1.0"
 
     repositories {
         google()
@@ -18,9 +18,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha11'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'com.google.gms:google-services:4.2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
